--- a/src/scss/feature/index/_news.scss
+++ b/src/scss/feature/index/_news.scss
@@ -128,7 +128,7 @@
     padding-bottom: 15.5vw;
     position: relative;
     .nav-btn {
-      color: color(dark-gray);
+      color: color(nobel);
       position: absolute;
       font-size: 8vw;
       font-weight: lighter;
