--- a/src/scss/idah-solution.scss
+++ b/src/scss/idah-solution.scss
@@ -59,7 +59,9 @@
       .solution-img {
         position: relative;
         height: auto;
+        overflow: hidden;
         img {
+          transition: transform 0.3s;
           position: absolute;
           width: 100%;
           height: 100%;
@@ -67,6 +69,9 @@
           left: 0;
           right: 0;
           bottom: 0;
+          &:hover {
+            transform: scale(1.1);
+          }
         }
       }
       &:nth-child(6n-5) {
