--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -62,7 +62,6 @@
       }
     }
   }
-
   .feature-list {
     display: flex;
     align-items: center;
@@ -286,30 +285,33 @@
     }
     .nav-item-list {
       .nav-item {
+        font-size: 4vw;
         padding: 10px 0 0 10px;
         display: block;
       }
     }
   }
-  .btn-contact-us {
+  .btn-contact-us-box {
     position: fixed;
     top: 77px;
-    right: 0;
-    color: color(white);
-    font-size: 4vw;
-    letter-spacing: 1px;
-    padding: 2.5vw 2vw;
-    font-weight: 100;
-    text-align: center;
-    background-color: color(orange);
-    border-radius: 10px 0 0 10px;
-    writing-mode: vertical-rl;
-    box-shadow: 0 0 10px color(dark-gray);
-    &:hover,
-    &:active,
-    &:focus,
-    &.active {
-      color: color(gray);
+    left: 90%;
+    .btn-contact-us {
+      color: color(white);
+      font-size: 4vw;
+      letter-spacing: 1px;
+      padding: 2.5vw 4vw 2.5vw 2vw;
+      font-weight: 100;
+      text-align: center;
+      background-color: color(orange);
+      border-radius: 10px 0 0 10px;
+      writing-mode: vertical-rl;
+      box-shadow: 0 0 10px color(dark-gray);
+      &:hover,
+      &:active,
+      &:focus,
+      &.active {
+        color: color(gray);
+      }
     }
   }
   .btn-menu-close {
