--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -36,6 +36,7 @@ $color: (
   suger-cane: #e9e9e7,
   french-gray: #bebfc2,
   nobel: #9f9f9f,
+  dusty-gray: #999999,
   dark-gray: #57585e,
   thunder: #231f20,
   black: #000,
