fix: product img height

--- a/src/scss/feature/index/_product.scss
+++ b/src/scss/feature/index/_product.scss
@@ -119,6 +119,7 @@
       .product-item-display {
         .product-img {
           object-fit: cover;
+          height: 37.1vw;
           width: 100%;
         }
         .product-category {
