fix: 修正下拉選單無法點擊, 調整選單展開範圍

--- a/src/scss/feature/_footer.scss
+++ b/src/scss/feature/_footer.scss
@@ -178,6 +178,7 @@
             }
           }
           .ftr-sel-lang-option-list {
+            z-index: z-index(select);
             overflow: hidden;
             background-color: color(thunder);
             transition: max-height 0.3s;
