--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -49,34 +49,38 @@
       .nav-item-list {
         position: absolute;
         top: 100%;
-        right: 0;
-        display: flex;
-        flex-direction: column;
+        left: 0;
+        display: grid;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: auto;
+        grid-auto-flow: dense column;
         background: color(white);
-        min-width: 9vw;
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.3s;
+        box-shadow: 0 5px 10px color(opacity-1);
         .nav-item {
-          &:first-child {
-            padding: 3vw 2vw 1vw 2vw;
-          }
-          padding: 1vw 2vw;
+          padding: 0.5vw 2vw;
           color: color(dark-gray);
-          text-align: right;
+          text-align: left;
           white-space: nowrap;
           &:hover,
           &:active,
           &:focus,
           &.active {
-            color: color(dusty-gray);
+            color: color(red);
+          }
+          &::before {
+            content: ">";
+            padding-right: 5px;
           }
         }
       }
       &:hover {
         .nav-item-list {
           transition: max-height 0.3s;
-          max-height: 50vw;
+          max-height: 10vw;
+          padding: 1vw 0;
         }
       }
     }
@@ -84,11 +88,16 @@
       color: color(dark-gray);
       font-size: 1.3vw;
       font-weight: 400;
+      padding: 12px 0;
       &:hover,
       &:active,
       &:focus,
       &.active {
-        color: color(dusty-gray);
+        padding: 12px 0 9px 0;
+        a {
+          color: color(red);
+        }
+        border-bottom: 3px solid color(red);
       }
       .icon-plus,
       .icon-minus {
@@ -129,8 +138,9 @@
     position: relative;
     & a[aria-expanded="false"] {
       + .sel-lang-option-list {
-        transition: max-height 0.3s;
+        transition: all 0.3s;
         max-height: 0px;
+        padding: 0;
       }
     }
     .sel-lang-option-list {
@@ -333,6 +343,16 @@
         font-size: 4vw;
         padding: 10px 0 0 10px;
         display: block;
+        &:hover,
+        &:active,
+        &:focus,
+        &.active {
+          color: color(red);
+        }
+        &::before {
+          content: ">";
+          padding-right: 5px;
+        }
       }
     }
   }
