--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -27,6 +27,7 @@ $color-gdt: (
 
 $color: (
   opacity-0: rgba(0, 0, 0, 0),
+  opacity-1: rgba(0, 0, 0, 0.1),
   opacity-3: rgba(0, 0, 0, 0.3),
   opacity-75: rgba(0, 0, 0, 0.75),
   opacity-w-15: rgba(255, 255, 255, 0.15),
@@ -41,6 +42,7 @@ $color: (
   thunder: #231f20,
   black: #000,
   orange: #ea5432,
+  red: #c9151e,
   white: #fff,
 );
 
