--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -173,6 +173,9 @@
         white-space: nowrap;
       }
     }
+    .dropdown-backdrop {
+      z-index: z-index(default);
+    }
   }
   .btn-contact-us {
     position: fixed;
