modify font size, merge css

--- a/src/scss/feature/_footer.scss
+++ b/src/scss/feature/_footer.scss
@@ -1,14 +1,28 @@
 @mixin footer {
 }
 @mixin footer-PC {
-}
-@mixin footer-PC-Tablet {
+  /***
+ *      /$$$$$$   /$$              
+ *     /$$__  $$ | $$              
+ *    | $$  \__//$$$$$$    /$$$$$$ 
+ *    | $$$$   |_  $$_/   /$$__  $$
+ *    | $$_/     | $$    | $$  \__/
+ *    | $$       | $$ /$$| $$      
+ *    | $$       |  $$$$/| $$      
+ *    |__/        \___/  |__/      
+ *                                 
+ *                                 
+ *                                 
+ */
   .ftr {
     background-color: color(thunder);
     display: flex;
     width: 100%;
     a {
       color: color(white);
+      font-weight: 500;
+      margin: 5px 0 5px 0;
+      padding: 5px;
     }
   }
   .ftr-info {
@@ -16,11 +30,11 @@
     display: flex;
     flex-direction: column;
     .ftr-link-topic {
-      height: 2.6vw;
+      height: 30px;
     }
     .ftr-info-container {
-      width: 15.7vw;
-      margin: auto 2.3vw auto auto;
+      width: 22.7vw;
+      margin: 1vw 2.3vw 0 3.3vw;
       .ftr-logo {
         margin-bottom: 4vw;
         img {
@@ -39,56 +53,54 @@
         font-weight: 300;
         margin-bottom: 2vw;
         i {
-          font-size: 1.3vw;
+          font-size: 26px;
         }
-        .ftr-sel-lang {
-          width: 4.4vw;
-          margin-left: 1.6vw;
-          background-color: color(thunder);
-          border: 0px;
-          outline: 0px;
-          text-align-last: center;
-          font-size: 0.85vw;
-          position: relative;
-          & a[aria-expanded="false"] {
-            + .ftr-sel-lang-option-list {
-              transition: max-height 0.3s;
-              max-height: 0px;
-            }
-          }
-          .ftr-sel-lang-option-list {
-            overflow: hidden;
-            background-color: color(dark-gray);
+      }
+      .ftr-sel-lang {
+        background-color: color(thunder);
+        border: 0px;
+        outline: 0px;
+        text-align-last: center;
+        font-size: 14px;
+        position: relative;
+        & a[aria-expanded="false"] {
+          + .ftr-sel-lang-option-list {
             transition: max-height 0.3s;
-            max-height: 500px;
-            position: absolute;
-            top: 100%;
-            right: 0;
-            .ftr-sel-lang-option {
-              padding: 10px;
-              width: 120px;
-            }
+            max-height: 0px;
           }
-          .lang-img {
-            display: none;
+        }
+        .ftr-sel-lang-option-list {
+          overflow: hidden;
+          background-color: color(dark-gray);
+          transition: max-height 0.3s;
+          max-height: 500px;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          .ftr-sel-lang-option {
+            padding: 10px;
+            width: 120px;
           }
-          .lang-txt {
-            display: flex;
-            justify-content: space-between;
-            i {
-              font-size: 12px;
-            }
+        }
+        .lang-img {
+          display: none;
+        }
+        .lang-txt {
+          display: flex;
+          justify-content: space-between;
+          i {
+            font-size: 12px;
           }
-          .dropdown-backdrop {
-            z-index: z-index(default);
-          }
+        }
+        .dropdown-backdrop {
+          z-index: z-index(default);
         }
       }
       .ftr-copy-right {
         color: color(nobel);
         font-weight: 300;
-        font-size: 0.8vw;
-        line-height: 1.1vw;
+        font-size: 14px;
+        line-height: 18px;
       }
     }
   }
@@ -98,7 +110,7 @@
     .ftr-link-group {
       display: flex;
       flex-direction: column;
-      width: 10vw;
+      width: 12vw;
       background-color: color(thunder);
       border: initial;
       margin-bottom: 0;
@@ -114,7 +126,8 @@
       .ftr-link-item {
         display: block;
         color: color(white);
-        font-size: 0.85vw;
+        margin-bottom: 10px;
+        font-size: 15px;
         font-weight: 300;
         padding: 0 0.8vw 0.8vw 1vw;
         &:last-child {
@@ -124,24 +137,24 @@
     }
   }
   .ftr-link-topic {
-    height: 2.6vw;
-    line-height: 2.6vw;
+    height: 30px;
     padding-left: 1vw;
+    padding-top: 8px;
     color: #fff;
     background-color: #57585e;
     font-weight: 300;
-    font-size: 1.05vw;
+    font-size: 16px;
     .icon-plus,
     .icon-minus {
       display: none !important;
     }
   }
 }
+@mixin footer-PC-Tablet {
+}
 @mixin footer-Tablet {
 }
 @mixin footer-Tablet-Mobile {
-}
-@mixin footer-Mobile {
   .ftr {
     background-color: color(thunder);
     display: flex;
@@ -172,36 +185,36 @@
         i {
           font-size: 20px;
         }
-        .ftr-sel-lang {
-          background-color: color(thunder);
-          position: relative;
-          width: 39vw;
-          text-align: right;
-          & a[aria-expanded="false"] {
-            + .ftr-sel-lang-option-list {
-              transition: max-height 0.3s;
-              max-height: 0px;
-            }
-          }
-          .ftr-sel-lang-option-list {
-            z-index: z-index(select);
-            overflow: hidden;
-            background-color: color(thunder);
+      }
+      .ftr-sel-lang {
+        background-color: color(thunder);
+        position: relative;
+        width: 39vw;
+        text-align: right;
+        & a[aria-expanded="false"] {
+          + .ftr-sel-lang-option-list {
             transition: max-height 0.3s;
-            max-height: 500px;
-            position: absolute;
-            top: 100%;
-            right: 0;
-            .ftr-sel-lang-option {
-              padding: 5px 0;
-            }
+            max-height: 0px;
           }
-          .lang-txt {
-            display: none;
+        }
+        .ftr-sel-lang-option-list {
+          z-index: z-index(select);
+          overflow: hidden;
+          background-color: color(thunder);
+          transition: max-height 0.3s;
+          max-height: 500px;
+          position: absolute;
+          top: 100%;
+          right: 0;
+          .ftr-sel-lang-option {
+            padding: 5px 0;
           }
-          .lang-img {
-            width: 37px;
-          }
+        }
+        .lang-txt {
+          display: none;
+        }
+        .lang-img {
+          width: 37px;
         }
       }
       .ftr-copy-right {
@@ -255,4 +268,6 @@
       }
     }
   }
+}
+@mixin footer-Mobile {
 }
