--- a/src/scss/feature/index/_contact.scss
+++ b/src/scss/feature/index/_contact.scss
@@ -8,7 +8,7 @@
   }
   .contact-container {
     margin: 0 16.3vw;
-    padding: 2.3vw 0;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,16 +16,16 @@
   .contact-title {
     width: 17.4vw;
     color: color(dark-gray);
-    font-size: 1.4vw;
+    font-size: 18px;
+    line-height: 22px;
     font-weight: 600;
-    line-height: 1.4vw;
   }
   .contact-desc {
     width: 34.2vw;
     color: color(dark-gray);
     border-left: 2px solid color(dark-gray);
-    font-size: 1.13vw;
-    line-height: 1.5vw;
+    font-size: 16px;
+    line-height: 20px;
     padding: 0.3vw 0 0.3vw 1.5vw;
   }
   .contact-phone,
@@ -63,16 +63,18 @@
   .contact-title {
     padding: 0 12vw 4.6vw 0;
     color: color(dark-gray);
-    font-size: 5.8vw;
-    line-height: 6.6vw;
     font-weight: 600;
   }
   .contact-desc {
     color: color(dark-gray);
-    font-size: 4.8vw;
-    line-height: 6vw;
+    font-size: 16px;
+    line-height: 20px;
     font-weight: 400;
     padding: 0 0 11vw 0;
+  }
+  html[lang="zh-hant-TW"] .contact-desc,
+  html[lang="zh-hans-CN"] .contact-desc {
+    line-height: 24px;
   }
   .contact-phone,
   .contact-email {
