--- a/src/scss/feature/index/_intro.scss
+++ b/src/scss/feature/index/_intro.scss
@@ -23,17 +23,17 @@
     line-height: 3.8vw;
   }
   .intro-sub-title {
-    font-size: 1.4vw;
-    line-height: 1.8vw;
-    font-weight: 500;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 600;
     padding-bottom: 1vw;
   }
   .intro-article {
     padding: 0 7vw;
   }
   .intro-section {
-    font-size: 1.2vw;
-    line-height: 1.5vw;
+    font-size: 16px;
+    line-height: 22px;
     font-weight: 400;
     padding-top: 1vw;
   }
@@ -74,8 +74,6 @@
     border-bottom: 1px solid color(dark-gray);
   }
   .intro-section {
-    font-size: 4vw;
-    line-height: 6.5vw;
     font-weight: 400;
     padding-top: 3.5vw;
   }
