--- a/src/scss/feature/index/_news.scss
+++ b/src/scss/feature/index/_news.scss
@@ -10,8 +10,6 @@
     color: color(dark-gray);
     text-align: center;
     padding: 2.7vw 0;
-    font-size: 3.1vw;
-    font-weight: 600;
   }
   .idah-news-slide {
     display: flex !important;
@@ -31,20 +29,25 @@
       display: flex;
       flex-direction: column;
       .idah-news-date {
-        font-size: 0.82vw;
-        line-height: 1.2vw;
+        font-size: 14px;
         font-weight: 400;
         padding-bottom: 0.4vw;
       }
       .idah-news-topic {
-        font-size: 1.2vw;
-        line-height: 1.5vw;
+        font-size: 18px;
+        line-height: 22px;
         padding-bottom: 0.7vw;
-        font-weight: 500;
+        font-weight: 600;
+        a {
+          color: color(dark-gray);
+          &:hover {
+            color: color(red);
+          }
+        }
       }
       .idah-news-desc {
-        font-size: 0.9vw;
-        line-height: 1.1vw;
+        font-size: 16px;
+        line-height: 20px;
         font-weight: 400;
         padding-bottom: 2.6vw;
       }
@@ -55,6 +58,9 @@
         font-weight: 400;
         display: flex;
         align-items: center;
+        &:hover {
+          color: color(red);
+        }
         img {
           width: 0.4vw;
           margin-right: 0.4vw;
@@ -81,8 +87,8 @@
       display: flex;
       align-items: center;
       .idah-share-social-title {
-        font-size: 1.02vw;
-        line-height: 1.2vw;
+        font-size: 16px;
+        line-height: 20px;
         font-weight: 400;
       }
       .idah-share-social-arrow {
@@ -98,8 +104,8 @@
     }
     .idah-share-btn-back {
       color: color(orange);
-      font-size: 0.82vw;
-      line-height: 1.2vw;
+      font-size: 16px;
+      line-height: 20px;
       font-weight: 400;
       padding: 0.4vw 2.4vw;
       border: 1px solid color(orange);
@@ -164,8 +170,6 @@
       display: flex;
       flex-direction: column;
       .idah-news-date {
-        font-size: 4.3vw;
-        line-height: 4.3vw;
         font-weight: 200;
         padding-bottom: 4vw;
       }
