--- a/src/scss/feature/index/_product.scss
+++ b/src/scss/feature/index/_product.scss
@@ -32,7 +32,7 @@
         }
         .product-category {
           text-align: center;
-          font-size: 1.2vw;
+          font-size: 15px;
           font-weight: 600;
           letter-spacing: 1px;
           padding: 1vw 0;
@@ -51,8 +51,8 @@
           background: color(opacity-75);
           padding: 2.4vw 1.9vw;
           .product-intro {
-            font-size: 1.8vw;
-            line-height: 1.8vw;
+            font-size: 22px;
+            line-height: 24px;
             font-weight: 600;
             padding-bottom: 1vw;
             position: relative;
@@ -66,8 +66,8 @@
             }
           }
           .product-desc {
-            font-size: 1.2vw;
-            line-height: 1.5vw;
+            font-size: 16px;
+            line-height: 20px;
             font-weight: 300;
             padding-top: 1vw;
           }
